--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     box-sizing: border-box;
-    font-family: "Roboto";
+    font-family: Roboto, sans-serif;
 }
 
 body{
@@ -8,7 +10,7 @@ body{
     flex-direction: column;
 }
 
-.hero, .footer{
+.hero{
     background-color: #1f2937;
 }
 
@@ -23,7 +25,7 @@ body{
 }
 
 .links{
-    color: #f9faf8;
+    color:#f9faf8;
 }
 
 .small{
@@ -41,19 +43,19 @@ button{
 }
 
 .medium{
-    background-color: #f9faf8;
     font-size: 36px;
     color: #1f2937;
     font-weight: 900;
 }
 
-.section2{
+.section1{
     background-color: #e5e7eb;
 }
 
 .quote{
     font-size: 36px;
     font-style: italic;
+    font-weight: light;
     color: #1f2937;
 }
 
@@ -68,5 +70,7 @@ button{
 
 .footer{
     color: #e5e7eb;
+    background-color: #1f2937;
+
 }
 
