--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{
-    box-sizing: border-box;
-    font-family: Roboto, sans-serif;
-}
+
 
 body{
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+    font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .hero{
     background-color: #1f2937;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
+
+.header{
+    display: flex;
+    justify-content: space-around;
+}
+
+.hero-content{
+    display: flex;
+    justify-content: space-around;
+}
+
+.section1{
+    background-color: #f9faf8 ;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    padding-top: 1em;
+}
+
+.image-row{
+    display: flex;
+    justify-content: center;
+    max-width: 100px;
+    gap: 1em;
+    font-size: 9px;
+}
+
+.section2{
+    background-color: #e5e7eb;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.section3{
+    background-color: #f9faf8;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    border: solid;
+
+}
+
+.box{
+    background-color: #3882f6;
+
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    background-color: #1f2937;
+    color: #e5e7eb;
+    flex: .5;
+    justify-content: center;
+    justify-self: end;
+
+}
+
+
 
 .big{
     font-size: 48px;
@@ -48,10 +118,6 @@ button{
     font-weight: 900;
 }
 
-.section1{
-    background-color: #e5e7eb;
-}
-
 .quote{
     font-size: 36px;
     font-style: italic;
@@ -68,9 +134,5 @@ button{
     color: #f9faf8;
 }
 
-.footer{
-    color: #e5e7eb;
-    background-color: #1f2937;
 
-}
 
