--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
 
 .hero-image{
     width: 444px;
-    height: auto;
+    height: 218px;
 }
 
 .left-hero, .right-hero{
@@ -34,6 +34,7 @@ body{
     align-items: baseline;
     width: 35%;
     gap: 9em;
+    margin-bottom: 5em;
 }
 
 .right-hero{
